[tool.poetry]
name = "lightning-core-rl"
version = "0.1.0"
description = ""
authors = ["Serotina"]
license = "MIT Lisence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^2.1.1"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
