[tool.poetry]
name = "lightning-core-rl"
version = "0.1.0"
description = ""
authors = ["Serotina"]
license = "MIT Lisence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^2.1.1"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
wandb = "^0.16.0"
opencv-python = "^4.8.1.78"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
