[tool.poetry]
name = "lightning-corerl"
version = "0.1.0"
description = ""
authors = ["Serotina <wlsdn2749@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
pytorch-lightning = "^2.2.1"
torch = "^2.2.1"
wandb = "^0.16.4"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
